Maintenance - Configure Qlty - Configure Sonar - Apply Sonar recommendations - Reformat code - Reformat markdowns - Migrate off of PR labeler - Reconfigure workflows - Update Checkstyle version and config - Update documentation with new badges
{minor}

Signed-off-by: Esta Nagy <nagyesta@gmail.com>